# xy-erp

./: .gitignore  README.md  activit.bat  chroma_tool.py  codegen_tool.py  faiss_tool.py  hnsw_tool.py  json_tool.html  main.py  main_mcp.py  mcp.json  mcp_relation.json  pyproject.toml  relation.txt  relation_graph.html  requirements.txt  start_api.bat  temp.csv  temp.json  temp2.csv  test.html  test.py  test_auth.html  test_chat_bloke.py  test_chat_image.py  test_excel_upload.html  test_import_relation.html  test_intent.html  test_keyword_search.py  test_main.py  test_make_json.html  test_mcp.py  test_mcp_stream.html  test_other_intent.py  test_subprocess.py  uv_sync_command_2.txt
datawork/: dataworker.py  link.txt  migrate_to_neo4j.py  parent.txt  verify_neo4j.py  verify_postgres.py
docs/: 必需字段默认规则说明.md  接口文档.md  接口设计.md  提示词.md  服务部署.md
erp-service/: requirements.txt
json/: linkJson格式.json  parent.txt  relation.txt  staff.json  table-zh.txt  业务订单Json格式.json  合同Json格式.json  员工Json格式.json  客户Json格式.json  岗位Json格式.json  日报表Json格式.json  班组与员工关联表Json格式.json  财务对账单Json格式.json  部门json格式.json
services/: R.py  admin_service.py  auth_service.py  business_service.py  cache.py  calcu_service.py  chart_service.py  chroma_sercice.py  csv_service.py  finance_service.py  llm_manager.py  llm_service.py  neo4j_service.py  order_service.py  outgoing_service.py  pay-settle.py  pay_service.py  purchase_service.py  quality_service.py  supabase_manager.py  task_service.py  tool.py  work_service.py
testcase/: testcase_admin.py  testcase_business.py  testcase_order.py  testcase_pay.py  (+4 more)
(+494 files in other folders)
