[project]
name = "erp-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dashscope>=1.25.1",
    "dotenv>=0.9.9",
    "faiss-cpu",
    "fastapi>=0.121.1",
    "fastmcp>=2.13.1",
    "hnswlib>=0.8.0",
    "jsonlines>=4.0.0",
    "matplotlib",
    "neo4j>=6.0.3",
    "numpy>=2.0",
    "openpyxl>=3.1.5",
    "pandas",
    "psycopg2-binary>=2.9.11",
    "qiniu>=7.17.0",
    "qwen-agent[mcp]>=0.0.31",
    "redis>=7.0.1",
    "sse-starlette>=3.0.3",
    "supabase>=2.24.0",
    "text2vec>=1.3.8",
    "torch>=2.9.1",
    "uvicorn>=0.38.0",
]
